# AIDevCompanionDev

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  TESTING.md  TEST_SUMMARY.md  lambda_handler.py  main.py  pyproject.toml  pytest.ini  requirements-aws.txt
.agent/workflows/: setup_aws.md
.github/workflows/: deploy-stage.yml
android-client/: .gitignore  README.md  gradle.properties  local.properties  settings.gradle.kts
android-client/app/: build.gradle.kts  local.properties
android-client/app/src/androidTest/java/com/aidevcompanion/app/ui/screens/: ChatScreenTest.kt
android-client/app/src/main/: AndroidManifest.xml
android-client/app/src/main/java/com/aidevcompanion/app/: AIDevCompanionApp.kt  MainActivity.kt
android-client/app/src/main/java/com/aidevcompanion/app/di/: DatabaseModule.kt  NetworkModule.kt  RepositoryModule.kt
android-client/app/src/main/res/values/: strings.xml  themes.xml
android-client/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  network_security_config.xml
android-client/scripts/: README.md  clean.sh  run_app.sh
app/: __init__.py
app/api/: chat.py  chat_llm.py  conversations.py  diag.py  health.py  jobs.py
app/bedrock/: client.py
app/core/: __init__.py  config.py  di.py  error_handlers.py  exceptions.py
app/domain/: __init__.py  models.py
app/services/: __init__.py  agents.py  conversation_manager.py  job_manager.py  rate_limiter.py
app/utils/: __init__.py  parsing.py
docs/: AWS_SETUP.md
scripts/: local_run.sh  package_lambda.sh
src/: __init__.py  crew.py
tests/: conftest.py  test_agents.py  test_api.py  test_bedrock_client.py  test_chat_integration.py  test_code_improver.py  test_conversation_flow.py  test_conversation_manager.py  test_crew.py  test_error_handlers.py  test_rate_limiter.py  test_search_memory.py  test_services.py
tools/: search_memory.py
(+23 files in other folders)
