[project]
name = "ai-dev-companion-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.121.0",
    "uvicorn>=0.27.0",
    "crewai>=0.11.0",
    "python-dotenv>=1.0.0",
    # CrewAI currently imports ChromaDB APIs that changed in 1.x; pin to a compatible line
    "chromadb>=0.4.24,<0.5.0",
    # Many libs still expect NumPy 1.x
    "numpy>=1.26,<2.0",
    # Ensure pkg_resources is available
    "setuptools>=68.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
